--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 
 <main>
+<!--    Tout les chemins du site web sont paramètré avec routerLink-->
+    <a routerLink="/">
     <header class="brand-name">
         <img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true">
     </header>
+    </a>
     <section class="content">
         <router-outlet></router-outlet>
     </section>
